# console-hero

./: Cargo.toml  LICENSE  README.md  cli.yml  interactive.yml
data/: basic_moves.json  classes.json  items.json  monsters.json  moves.json  special_moves.json  tags.json
src/: completion.rs  die.rs  main.rs  tests.rs
src/data/: card.rs  helper.rs  items.rs  mod.rs  monsters.rs  moves.rs  tags.rs
src/data/card/: border.rs  helper.rs  mod.rs
