[package]
name = "console-hero"
version = "0.1.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]

[dependencies]
rustyline = "1.0.0"
#d20 = "0.1.0"
serde_json = "1.0.24"
jsonpath = "0.1.1"
#log = "0.4.3"
#env_logger = "0.5.11"
regex = "1.0.2"
serde_derive = "1.0.70"
serde = "1.0.70"
textwrap = "0.10.0"